# chatnoir-pyterrier

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  codeql-analysis.yml
chatnoir_pyterrier/: __init__.py  conftest.py  feature.py  retrieve.py  test_retrieve.py
examples/: .gitignore  experiment.ipynb  experiment.py  ray-runtime-env.yml  search.ipynb  search_touche_2023.ipynb
tests/: conftest.py  test_random_document_access.py  test_retrieve.py
