[project]
name = "chatnoir-pyterrier"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
]
description = "Use the ChatNoir search engine in PyTerrier."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "chatnoir-api~=3.2.0",
    "importlib-metadata~=8.5",
    "pandas~=2.0",
    "python-terrier~=0.11",
    "typing-extensions~=4.12",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "jupyter~=1.0",
    "mypy~=1.13",
    "pytest~=8.3",
    "pytest-cov>=5,<7",
    "ruff>=0.7.1,<0.12.0",
    "types-requests~=2.32",
]
experiment = [
    # "pyterrier-t5 @ git+https://github.com/terrierteam/pyterrier_t5.git@8caa9a28e6cd102c8e294a6a01a42a6ff8e41c76",
    "pyterrier-caching~=0.3.0",
    "python-dotenv~=1.0",
    "ray[default]~=2.38",
]

[project.urls]
"Homepage" = "https://github.com/chatnoir-eu/chatnoir-pyterrier"
"Bug Tracker" = "https://github.com/chatnoir-eu/chatnoir-pyterrier/issues"

[build-system]
requires = ["setuptools>=50", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    ".venv",
    ".github",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.mypy]
exclude = [
    "build",
    "venv",
    ".venv",
    ".github",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    ".venv",
    ".github",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/conftest.py"]

[tool.pytest.ini_options]
log_cli = true
filterwarnings = [
    'ignore::DeprecationWarning',
]

[tool.setuptools_scm]
