[metadata]
name = chatnoir-pyterrier
version = attr: chatnoir_pyterrier.__version__
author = Jan Heinrich Reimer
author_email = jan.reimer@student.uni-halle.de
maintainer = Jan Heinrich Reimer
description = Use the ChatNoir search engine in PyTerrier.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/chatnoir-eu/chatnoir-pyterrier
project_urls =
    Bug Tracker = https://github.com/chatnoir-eu/chatnoir-pyterrier/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    chatnoir-api>=2.0.2,==2.*
    python-terrier>=0.8,==0.*
    pyjnius>=1.3.0,==1.3.*
    importlib-metadata>=4.0,==4.*
    pandas>=1.2,==1.*

[options.extras_require]
test =
    flake8>=4.0,==4.*
    pylint>=2.12,==2.*
    pytest>=6.2,==6.*
    pytest-cov>=3.0,==3.*
    jupyter>=1.0,==1.*
    requests>=2.26,==2.*
